# mygrid_dash

./: .gitignore  Cargo.toml  README.md  build.rs
config/: config.toml
nginx/: README.md
scripts/: deploy.sh
src/: dispatcher.rs  errors.rs  handlers.rs  initialization.rs  logging.rs  main.rs  models.rs  serialize_iso_8601.rs  serialize_timestamp.rs  serializer_time.rs  traits.rs  usage_policy.rs
src/manager_fox_cloud/: errors.rs  mod.rs  models.rs
src/manager_inverter/: mod.rs  models.rs
src/manager_mygrid/: errors.rs  mod.rs  models.rs
src/manager_nordpool/: mod.rs
src/manager_tokens/: errors.rs  mod.rs
src/manager_weather/: errors.rs  mod.rs  models.rs
static/: index.html  index_full.html  index_short.html  manifest.json  mygrid_cloud.js  mygrid_dash.js  mygrid_dash_essential_v2.js  mygrid_dash_short.js  mygrid_dash_short_v2.js  mygrid_dash_v2.js  mygrid_load.js  mygrid_policy.js  mygrid_prod.js  mygrid_realtime.js  mygrid_soc_policy.js  mygrid_soc_soh.js  mygrid_sync_weather.js  mygrid_tariffs.js  mygrid_tariffs_buy.js  mygrid_tariffs_tomorrow.js  mygrid_temp.js  styles.css  unauthorized.html
static_src/: index.html  index_full.html
systemd/: README.md  mygriddash.service  start.sh
