[package]
name = "mygrid_dash"
version = "2.5.4"
edition = "2021"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
rustls = "0.23"
rustls-pki-types = "1.13.0"
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-files = "0.6"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
log4rs = "1.4"
log = "0.4"
chrono = {  version = "0.4", features = ["serde"] }
md-5 = "0.10.6"
glob = "0.3"
uuid = {version = "1.19", features = ["v4"]}
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
