[package]
name = "mygrid_dash"
version = "2.6.12"
edition = "2021"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie"] }
axum-server = "0.8"
tower-http = { version = "0.6", features = ["fs", "set-header"] }
tokio = { version = "1.49", features = ["rt-multi-thread"] }
reqwest = { version = "0.13", features = ["query", "form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
log4rs = "1.4"
log = "0.4"
chrono = {  version = "0.4", features = ["serde"] }
md-5 = "0.10.6"
glob = "0.3"
uuid = {version = "1.19", features = ["v4"]}
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
anyhow = "1.0"
thiserror = "2.0"
