[package]
name = "mygrid_dash"
version = "2.9.3"
edition = "2024"

build = "build.rs"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie"] }
axum-server = "0.8"
tower-http = { version = "0.6", features = ["fs", "set-header", "trace"] }
tokio = { version = "1.50", features = ["rt-multi-thread"] }
reqwest = { version = "0.13", features = ["query", "form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "1.0", default-features = false, features = ["serde", "parse"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
chrono = {  version = "0.4", features = ["serde"] }
glob = "0.3"
uuid = {version = "1.22", features = ["v4"]}
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
anyhow = "1.0"
thiserror = "2.0"
foxess = "1.0"
